# gtk-ansi-parser

./: .gitignore  Doxyfile  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  doxygen.yml
docs/: ANSIcodes.md  Doxygen.md  README.md
docs/doxygen/: header.html
include/: gtk_ansi.h
src/: demo.c  demo.sh  gtk_ansi.c  gtk_ansi_private.h
tests/: main.cpp  meson.build  test_append.cpp  test_util.h
